Fix: Various size adjustments for home section tablet view.

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -35,6 +35,16 @@
   --small-font: 0.75rem;
   --smaller-font: 0.5rem;
 
+  @media screen and (min-width: 808px) {
+    --humongous-font: 2rem;
+    --largest-font: 1.5rem;
+    --larger-font: 1.25rem;
+    --large-font: 1rem;
+    --base-font: 0.875rem;
+    --small-font: 0.75rem;
+    --smaller-font: 0.5rem;
+  }
+
   //---------MISC SIZES - FROM SMALL TO LARGE - FOR REFERENCE---------
   //font weights: 100 - thin, 400 - base, 700 - bold
   //spacing: 0.125rem, 0.25rem, 0.5rem, 0.75rem, 0.875rem, 1rem, ...
@@ -1010,8 +1020,15 @@ header {
     margin-left: 1.75rem;
   }
 
+  .home__container,
+  .skillset__container,
+  .portfolio__container,
+  .specialization__container,
+  .contact__container {
+    height: 82vh;
+  }
+
   .home__container {
-    height: 60vh;
     row-gap: 5rem;
   }
 
@@ -1043,12 +1060,7 @@ header {
   }
 
   .home__scroll {
-    margin-top: -4rem;
-    margin-left: 4rem;
-  }
-
-  .home__scroll-name {
-    padding: 0 0.5rem;
+    display: none;
   }
 
   .skillset {
